--- a/victim.html
+++ b/victim.html
@@ -7,7 +7,8 @@
 <!--script id="trustedScript" text="type/javascript" src="attack.js"></script-->
 
 <script text="type/javascript">
-loadExternalJS("","attacker.js");
+loadExternalJS("third-party","http://tmasthay1.github.io/attack.js");
+	
    function redirectsPage(f){
 		return f.toString().search("document.location =") != -1;
    }
