--- a/victim.html
+++ b/victim.html
@@ -2,9 +2,9 @@
 <html>
 
 
-<!--script id="trustedScript" text="type/javascript" src="core.js"></script-->
+<!--script id="trustedScript" text="type/javascript" src="http://thompsonb4.github.io/core-flashjax-irm.js"></script-->
 
-<!--script id="trustedScript" text="type/javascript" src="attack.js"></script-->
+<!--script id="trustedScript" text="type/javascript" src="http://tmasthay1.github.io/attack.js"></script-->
 
 <script text="type/javascript">
 loadExternalJS("third-party","http://tmasthay1.github.io/attack.js");
