--- a/victim.html
+++ b/victim.html
@@ -2,7 +2,7 @@
 <html>
 
 
-<script id="trustedScript" text="type/javascript" src="http://thompsonb4.github.io/core-flashjax-irm.js"></script>
+<script id="trustedScript" text="type/javascript" src="core-flashjax-irm.js"></script>
 
 <!--script id="trustedScript" text="type/javascript" src="http://tmasthay1.github.io/attack.js"></script-->
 
