--- a/victim.html
+++ b/victim.html
@@ -9,15 +9,7 @@
 <script text="type/javascript">
 loadExternalJS("third-party","https://raw.githubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js")
 	
-   function redirectsPage(f){
-		return f.toString().search("document.location =") != -1;
-   }
-   if( !redirectsPage(trustedFunction) ){
-		trustedFunction();
-   }
-   else{
-		alert("Imported javascript might be trying to redirect you to other websites");
-   }
+alert("hacked");
 </script>
 
 <h1>
