--- a/victim.html
+++ b/victim.html
@@ -4,7 +4,7 @@
 
 <script id="trustedScript" text="type/javascript" src="core-flashjax-irm.js"></script>
 
-<script id="trustedScript" text="type/javascript" src="https://rawgithubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js"></script>
+<script id="trustedScript" text="type/javascript" src="https://rawgit.com/tmasthay1/tmasthay1.github.io/master/attack.js"></script>
 
 <script text="type/javascript">
 //loadExternalJS("third-party","https://raw.githubusercontent.com/tmasthay1/tmasthay1.github.io/master/attack.js")
