--- a/victim.html
+++ b/victim.html
@@ -10,7 +10,7 @@
 loadExternalJS("third-party","https://rawgit.com/tmasthay1/tmasthay1.github.io/master/attack.js");
  
 trustedFunction();	
-alert("hacked");
+alert("hacked2");
 </script>
 
 <h1>
