--- a/victim.html
+++ b/victim.html
@@ -7,7 +7,7 @@
  <script id="trustedScript" text="type/javascript" src="https://rawgit.com/tmasthay1/tmasthay1.github.io/master/attack.js"></script>
 
 <script text="type/javascript">
-loadExternalJS("third-party","http://rawgit.com/tmasthay1/tmasthay1.github.io/master/attack.js");
+loadExternalJS("thirdParty","https://rawgit.com/tmasthay1/tmasthay1.github.io/master/attack.js");
  
 trustedFunction();	
 alert("hacked2");
